--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "electron-packager": "^7.0.3",
-    "electron-prebuilt": "^1.2.1"
+    "electron-prebuilt": "^1.2.1",
+    "eslint": "^2.11.1"
   },
   "dependencies": {
     "nconf": "^0.8.4"
