--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
   "main": "./main.js",
   "scripts": {
     "start": "electron .",
-    "package": "electron-packager ./ GreenLight --platform=darwin --arch=x64 --out ~/Desktop/GreenLight --version 1.2.1 --overwrite --icon=./app/img/app-icon.icns"
+    "package": "electron-packager ./ GreenLight --platform=darwin --arch=x64 --out ./dist --version 1.2.1 --overwrite --icon=./app/img/app-icon.icns",
+    "postinstall": "electron-rebuild -v 1.2.1 --pre-gyp-fix --force -m . -w node-hid"
   },
   "devDependencies": {
     "electron-packager": "^7.0.3",
     "electron-prebuilt": "^1.2.1",
+    "electron-rebuild": "^1.1.5",
     "eslint": "^2.11.1"
   },
   "dependencies": {
-    "nconf": "^0.8.4"
+    "nconf": "^0.8.4",
+    "node-hid": "^0.5.1",
+    "node-notifier": "^4.6.0"
   }
 }
