--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "./main.js",
   "scripts": {
     "start": "electron .",
+    "debug": "GREENLIGHT_DEBUG=1 electron .",
     "package": "electron-packager ./ GreenLight --platform=darwin --arch=x64 --out ./dist --version 1.2.1 --overwrite --icon=./app/img/app-icon.icns",
     "postinstall": "electron-rebuild -v 1.2.1 --pre-gyp-fix --force -m . -w node-hid"
   },
