--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: node_js
 
 node_js:
-  - "4"
-  - "5"
-  - "6"
-  - "node"
+    - "4"
+    - "5"
+    - "6"
+    - "node"
 
 addons:
-  apt:
-    packages:
-    - build-essential
+    apt:
+        sources:
+            - ubuntu-toolchain-r-test
+        packages:
+            - build-essential
+            - gcc-4.8
+            - g++-4.8
